knative-build/runtimes/javascript/tests/error/payload-kn-bad-init-json-payload-invalid.http
GET http://localhost:8080/ HTTP/1.1
content-type: application/json

{
  "init": {
    "name" : "bad-init-json-payload-syntax-error",
    "main" : "main",
    "binary": false,
    "code" : "function main() {return {payload: 'Hello World!'};}",
  }
}

###
